# docs-converter

./: .env.example  .envrc  .gitignore  README.md  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml
deploy/: serve.sh  teardown.sh
scripts/: build-sidecar.sh  ctx7.sh  e2e.sh
server/sidecars/doc-convert/: Cargo.toml  moon.yml
server/sidecars/doc-convert/src/: cli.rs  client.rs  convert.rs  engine.rs  error.rs  extract.rs  main.rs  progress.rs  serve.rs  tools.rs  workdir.rs
server/sidecars/doc-convert/tests/: integration.rs
src/: App.svelte  app.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: convert.ts  files.ts
src/lib/components/: Controls.svelte  Dropzone.svelte  Picker.svelte  ProgressLog.svelte  Toast.svelte
