[package]
name = "docs-converter"
version = "0.1.0"
description = "Upload a PDF and convert it to md/html/json/tex/docx/pdf with OCR."
authors = ["Izaacapp"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "docs_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
