[package]
name = "doc-convert-sidecar"
version = "0.1.0"
edition = "2021"
publish = false
description = "PDF -> md/html/tex/docx/pdf — pdf_oxide in-process + pandoc. CLI and a tiny HTTP service."

# One small binary, two modes:
#   doc-convert -i in.pdf -t md -o out.md     # CLI
#   doc-convert serve --port 8088             # HTTP API (POST /convert?to=md, body=PDF)
#
# PDF extraction is in-process via pdf_oxide (fastest Rust PDF crate, 0.8ms/page,
# pure CPU — no GPU, no Python). Deployed on the converter server it does the
# work there while the GPU stays free for the LLM. pandoc handles the
# md->{html,tex,docx,pdf} leg.

[[bin]]
name = "doc-convert"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
pdf_oxide = "0.3"
unicode-normalization = "0.1"
which = "6"
tiny_http = "0.12"
tempfile = "3"
